[gd_scene load_steps=13 format=3 uid="uid://covar11igmvop"]

[ext_resource type="Script" path="res://checkpoint.gd" id="1_i4q8k"]
[ext_resource type="Texture2D" uid="uid://cr0aj7bm4ca37" path="res://Assets/Traps/ItemTraps/CheckPoint.png" id="2_7wwab"]
[ext_resource type="AudioStream" uid="uid://bptjqug7nj30c" path="res://Assets/Loot/Menu FX example/Item1B.wav" id="3_v61rl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fqfht"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_p658i"]
atlas = ExtResource("2_7wwab")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c58c"]
atlas = ExtResource("2_7wwab")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uv46"]
atlas = ExtResource("2_7wwab")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnoj5"]
atlas = ExtResource("2_7wwab")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1uj1"]
atlas = ExtResource("2_7wwab")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coihj"]
atlas = ExtResource("2_7wwab")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufypw"]
atlas = ExtResource("2_7wwab")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5u34s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p658i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c58c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uv46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnoj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1uj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coihj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufypw")
}],
"loop": false,
"name": &"Checkpoint",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Checkpoint" type="Node2D"]
script = ExtResource("1_i4q8k")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_fqfht")

[node name="Checkpoint_Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5u34s")
animation = &"Checkpoint"

[node name="PickedUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_v61rl")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
